fixed shadow behind cast thumbnails

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -303,7 +303,7 @@ ul a:hover {
   display: block;
   z-index: 999;
   cursor: pointer;
-  box-shadow: 0 10px 13px -7px rgba(0, 0, 0, 0.4), 0 0 5px 2px transparent;
+  box-shadow: 0 10px 0px -7px rgba(0, 0, 0, 0.4), 0 7px 5px -7px transparent;
 }
 
 .card:hover {
